--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "framework"
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.4",
         "laminas/laminas-component-installer": "^1.0 || ^2.1",
         "laminas/laminas-development-mode": "^3.2",
         "laminas/laminas-skeleton-installer": "^0.2 || ^1.0",
@@ -22,7 +22,17 @@
         "laminas/laminas-mvc-i18n": "^1.1.1",
         "laminas/laminas-mvc-plugins": "^1.0.1",
         "laminas/laminas-psr7bridge": "^1.2.0",
-        "laminas/laminas-session": "^2.9.1"
+        "laminas/laminas-session": "^2.9.1",
+        "laminas/laminas-db": "^2.12",
+        "laminas/laminas-servicemanager": "^3.6",
+        "laminas/laminas-hydrator": "^4.1",
+        "doctrine/doctrine-orm-module": "^4.0",
+        "laminas/laminas-mvc-plugin-flashmessenger": "^1.2",
+        "laminas/laminas-view": "^2.12",
+        "ext-pdo": "*",
+        "ext-fileinfo": "*",
+        "ext-gd": "*",
+        "laminas/laminas-validator": "^2.14"
     },
     "autoload": {
         "psr-4": {
